[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/UI/Fighting/FighterTimeLine.gd" type="Script" id=1]
[ext_resource path="res://Assets/images/Icons/Armor/helmets_23.png" type="Texture" id=2]
[ext_resource path="res://Assets/images/Fight/TimeLine/TimeLineTurnSign.png" type="Texture" id=3]
[ext_resource path="res://Assets/images/Fight/TimeLine/TimeLinePrev.png" type="Texture" id=4]

[node name="FighterTimeLine" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1080, 80 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 142.0
margin_right = 938.0
margin_bottom = 80.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CenterContainer/HBoxContainer"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="CenterContainer/HBoxContainer"]
margin_left = 120.0
margin_right = 200.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="TextureRect3" type="TextureRect" parent="CenterContainer/HBoxContainer"]
margin_left = 240.0
margin_right = 320.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="TextureRect4" type="TextureRect" parent="CenterContainer/HBoxContainer"]
margin_left = 360.0
margin_right = 440.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="TextureRect5" type="TextureRect" parent="CenterContainer/HBoxContainer"]
margin_left = 480.0
margin_right = 560.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="TextureRect6" type="TextureRect" parent="CenterContainer/HBoxContainer"]
margin_left = 600.0
margin_right = 680.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="TurnSignal" type="TextureRect" parent="CenterContainer/HBoxContainer"]
margin_left = 720.0
margin_right = 738.0
margin_bottom = 80.0
rect_min_size = Vector2( 18, 0 )
size_flags_stretch_ratio = 3.15
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="PrevSignal" type="TextureRect" parent="CenterContainer/HBoxContainer"]
margin_left = 778.0
margin_right = 796.0
margin_bottom = 80.0
rect_min_size = Vector2( 18, 0 )
size_flags_stretch_ratio = 3.15
texture = ExtResource( 4 )
expand = true
stretch_mode = 5
